--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -80,8 +80,11 @@ access_control:
 
 identity_providers:
   oidc:
+    jwks:
+      - key: |
+          {{ secret "/config/secret/OIDC_JWKS_KEY" | mindent 10 "|" | msquote }}
     cors:
-      endpoints: ["authorization", "token", "revocation", "introspection"]
+      endpoints: [authorization, token, revocation, introspection]
       allowed_origins_from_client_redirect_uris: true
     lifespans:
       id_token: 1h
@@ -115,7 +118,7 @@ identity_providers:
         pre_configured_consent_duration: 1y
         scopes: ["openid", "profile", "email"]
         redirect_uris:
-          ["https://immich.${SECRET_DOMAIN}/auth/login", "https://immich.${SECRET_DOMAIN}/user-settings",  "app.immich:///oauth-callback"]
+          ["https://immich.${SECRET_DOMAIN}/auth/login", "https://immich.${SECRET_DOMAIN}/user-settings", "app.immich:///oauth-callback"]
         userinfo_signed_response_alg: none
         token_endpoint_auth_method: 'client_secret_post'
       - client_name: Minio
@@ -135,10 +138,7 @@ identity_providers:
         pre_configured_consent_duration: 1y
         scopes: ["openid", "profile", "groups", "email"]
         redirect_uris:
-          [
-            "https://audiobooks.${SECRET_DOMAIN}/auth/openid/callback",
-            "audiobookshelf://oauth",
-          ]
+          ["https://audiobooks.${SECRET_DOMAIN}/auth/openid/callback", "https://audiobooks.${SECRET_DOMAIN}/auth/openid/mobile-redirect", "audiobookshelf://oauth"]
         userinfo_signed_response_alg: none
       - client_name: Tandoor
         client_id: tandoor
@@ -148,9 +148,7 @@ identity_providers:
         pre_configured_consent_duration: 1y
         scopes: ["openid", "profile", "groups", "email"]
         redirect_uris:
-          [
-            "https://tandoor.${SECRET_DOMAIN}/accounts/oidc/tandoor/login/callback/",
-          ]
+          ["https://tandoor.${SECRET_DOMAIN}/accounts/oidc/tandoor/login/callback/",]
         userinfo_signed_response_alg: none
       - client_name: Paperless
         client_id: paperless
@@ -160,9 +158,7 @@ identity_providers:
         pre_configured_consent_duration: 1y
         scopes: ["openid", "profile", "groups", "email"]
         redirect_uris:
-          [
-            "https://paperless.${SECRET_DOMAIN}/accounts/oidc/authelia/login/callback/",
-          ]
+          ["https://paperless.${SECRET_DOMAIN}/accounts/oidc/authelia/login/callback/"]
         userinfo_signed_response_alg: none
       - client_name: Kyoo
         client_id: kyoo
@@ -172,9 +168,7 @@ identity_providers:
         pre_configured_consent_duration: 1y
         scopes: ["openid", "profile", "groups", "email"]
         redirect_uris:
-          [
-            "https://kyoo.${SECRET_DOMAIN}/api/auth/logged/authelia",
-          ]
+          ["https://kyoo.${SECRET_DOMAIN}/api/auth/logged/authelia"]
         userinfo_signed_response_alg: none
       - client_name: Adventurelog
         client_id: adventurelog
@@ -184,7 +178,5 @@ identity_providers:
         pre_configured_consent_duration: 1y
         scopes: ["openid", "profile", "groups", "email"]
         redirect_uris:
-          [
-            "https://adventurelog-backend.${SECRET_DOMAIN}/accounts/oidc/adventurelog/login/callback/",
-          ]
+          ["https://adventurelog-backend.${SECRET_DOMAIN}/accounts/oidc/adventurelog/login/callback/"]
         userinfo_signed_response_alg: none
