--- a/kubernetes/apps/default/authelia/app/externalsecret.yaml
+++ b/kubernetes/apps/default/authelia/app/externalsecret.yaml
@@ -22,15 +22,23 @@ spec:
         AUTHELIA_STORAGE_POSTGRES_PASSWORD: &dbPass "{{ .AUTHELIA_STORAGE_POSTGRES_PASSWORD }}"
         # OAUTH Apps
         GRAFANA_OAUTH_CLIENT_SECRET: "{{ .GRAFANA_OAUTH_CLIENT_SECRET }}"
+        GRAFANA_OAUTH_DIGEST: "{{ .GRAFANA_OAUTH_DIGEST }}"
         NEXTCLOUD_OAUTH_CLIENT_SECRET: "{{ .NEXTCLOUD_OAUTH_CLIENT_SECRET }}"
-        GITEA_OAUTH_CLIENT_SECRET: "{{ .GITEA_OAUTH_CLIENT_SECRET }}"
+        NEXTCLOUD_OAUTH_DIGEST: "{{ .NEXTCLOUD_OAUTH_DIGEST }}"
         IMMICH_OAUTH_CLIENT_SECRET: "{{ .IMMICH_OAUTH_CLIENT_SECRET }}"
+        IMMICH_OAUTH_DIGEST: "{{ .IMMICH_OAUTH_DIGEST }}"
         MINIO_OAUTH_CLIENT_SECRET: "{{ .MINIO_OAUTH_CLIENT_SECRET }}"
+        MINIO_OAUTH_DIGEST: "{{ .MINIO_OAUTH_DIGEST }}"
         AUDIOBOOKSHELF_OAUTH_CLIENT_SECRET: "{{ .AUDIOBOOKSHELF_OAUTH_CLIENT_SECRET }}"
+        AUDIOBOOKSHELF_OAUTH_DIGEST: "{{ .AUDIOBOOKSHELF_OAUTH_DIGEST }}"
         TANDOOR_OAUTH_CLIENT_SECRET: "{{ .TANDOOR_OAUTH_CLIENT_SECRET }}"
+        TANDOOR_OAUTH_DIGEST: "{{ .TANDOOR_OAUTH_DIGEST }}"
         PAPERLESS_OAUTH_CLIENT_SECRET: "{{ .PAPERLESS_OAUTH_CLIENT_SECRET }}"
+        PAPERLESS_OAUTH_DIGEST: "{{ .PAPERLESS_OAUTH_DIGEST }}"
         KYOO_OAUTH_CLIENT_SECRET: "{{ .KYOO_OAUTH_CLIENT_SECRET }}"
+        KYOO_OAUTH_DIGEST: "{{ .KYOO_OAUTH_DIGEST }}"
         ADVENTURELOG_OAUTH_CLIENT_SECRET: "{{ .ADVENTURELOG_OAUTH_CLIENT_SECRET }}"
+        ADVENTURELOG_OAUTH_DIGEST: "{{ .ADVENTURELOG_OAUTH_DIGEST }}"
         # DB
         INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_HOST: *dbHost
@@ -119,6 +127,14 @@ spec:
       remoteRef:
         key: 6dad7c46-0bce-4768-93ce-97b7ee5f83cd
         property: oauth_client_secret
+    - secretKey: PAPERLESS_OAUTH_DIGEST
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: 6dad7c46-0bce-4768-93ce-97b7ee5f83cd
+        property: oauth_digest
     - secretKey: GRAFANA_OAUTH_CLIENT_SECRET
       sourceRef:
         storeRef:
@@ -127,6 +143,14 @@ spec:
       remoteRef:
         key: 3a6a4796-6f02-45c3-b39e-067267b6ebfc
         property: oauth_client_secret
+    - secretKey: GRAFANA_OAUTH_DIGEST
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: 3a6a4796-6f02-45c3-b39e-067267b6ebfc
+        property: oauth_digest
     - secretKey: NEXTCLOUD_OAUTH_CLIENT_SECRET
       sourceRef:
         storeRef:
@@ -135,14 +159,14 @@ spec:
       remoteRef:
         key: 9af7a56c-e96c-4ce0-b952-081affcad60b
         property: oauth_client_secret
-    - secretKey: GITEA_OAUTH_CLIENT_SECRET
+    - secretKey: NEXTCLOUD_OAUTH_DIGEST
       sourceRef:
         storeRef:
           name: bitwarden-fields
           kind: ClusterSecretStore
       remoteRef:
-        key: df119769-7711-4d62-bfb9-af37957595c7
-        property: oauth_client_secret
+        key: 9af7a56c-e96c-4ce0-b952-081affcad60b
+        property: oauth_digest
     - secretKey: IMMICH_OAUTH_CLIENT_SECRET
       sourceRef:
         storeRef:
@@ -151,6 +175,14 @@ spec:
       remoteRef:
         key: a43f1a71-07fd-4649-8f58-3a024e5d41c8
         property: oauth_client_secret
+    - secretKey: IMMICH_OAUTH_DIGEST
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: a43f1a71-07fd-4649-8f58-3a024e5d41c8
+        property: oauth_digest
     - secretKey: MINIO_OAUTH_CLIENT_SECRET
       sourceRef:
         storeRef:
@@ -159,6 +191,14 @@ spec:
       remoteRef:
         key: ddc59a49-292c-482a-aaaf-5f43d869189d
         property: oauth_client_secret
+    - secretKey: MINIO_OAUTH_DIGEST
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: ddc59a49-292c-482a-aaaf-5f43d869189d
+        property: oauth_digest
     - secretKey: AUDIOBOOKSHELF_OAUTH_CLIENT_SECRET
       sourceRef:
         storeRef:
@@ -167,6 +207,14 @@ spec:
       remoteRef:
         key: 3656fdac-a0d4-4d05-8c90-ab180e5853da
         property: oauth_client_secret
+    - secretKey: AUDIOBOOKSHELF_OAUTH_DIGEST
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: 3656fdac-a0d4-4d05-8c90-ab180e5853da
+        property: oauth_digest
     - secretKey: TANDOOR_OAUTH_CLIENT_SECRET
       sourceRef:
         storeRef:
@@ -175,6 +223,14 @@ spec:
       remoteRef:
         key: a7bb0a86-14c7-4748-9d35-2d425dc2180b
         property: oauth_client_secret
+    - secretKey: TANDOOR_OAUTH_DIGEST
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: a7bb0a86-14c7-4748-9d35-2d425dc2180b
+        property: oauth_digest
     - secretKey: KYOO_OAUTH_CLIENT_SECRET
       sourceRef:
         storeRef:
@@ -183,6 +239,14 @@ spec:
       remoteRef:
         key: 8b972093-ea0b-4af3-81d0-43b0bb9283f8
         property: oauth_client_secret
+    - secretKey: KYOO_OAUTH_DIGEST
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: 8b972093-ea0b-4af3-81d0-43b0bb9283f8
+        property: oauth_digest
     - secretKey: ADVENTURELOG_OAUTH_CLIENT_SECRET
       sourceRef:
         storeRef:
@@ -191,3 +255,11 @@ spec:
       remoteRef:
         key: de49178f-239e-4590-b281-e11fcb718dd9
         property: oauth_client_secret
+    - secretKey: ADVENTURELOG_OAUTH_DIGEST
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: de49178f-239e-4590-b281-e11fcb718dd9
+        property: oauth_digest
