--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -135,11 +135,17 @@ identity_providers:
         client_secret: '{{ secret "/config/secret/AUDIOBOOKSHELF_OAUTH_DIGEST" }}'
         public: false
         authorization_policy: two_factor
+        require_pkce: true
+        pkce_challenge_method: 'S256'
         pre_configured_consent_duration: 1y
         scopes: ["openid", "profile", "groups", "email"]
         redirect_uris:
           ["https://audiobooks.${SECRET_DOMAIN}/auth/openid/callback", "https://audiobooks.${SECRET_DOMAIN}/auth/openid/mobile-redirect", "audiobookshelf://oauth"]
-        userinfo_signed_response_alg: none
+        grant_types:
+          - 'authorization_code'
+        access_token_signed_response_alg: 'none'
+        userinfo_signed_response_alg: 'none'
+        token_endpoint_auth_method: 'client_secret_basic'
       - client_name: Tandoor
         client_id: tandoor
         client_secret: '{{ secret "/config/secret/TANDOOR_OAUTH_DIGEST" }}'
