--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -141,8 +141,8 @@ identity_providers:
         scopes: ["openid", "profile", "groups", "email"]
         redirect_uris:
           ["https://audiobooks.${SECRET_DOMAIN}/auth/openid/callback", "https://audiobooks.${SECRET_DOMAIN}/auth/openid/mobile-redirect", "audiobookshelf://oauth"]
-        grant_types:
-          - 'authorization_code'
+        response_types: ['code']
+        grant_types: ['authorization_code']
         access_token_signed_response_alg: 'none'
         userinfo_signed_response_alg: 'none'
         token_endpoint_auth_method: 'client_secret_basic'
