--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - ./authelia/ks.yaml
   - ./bazarr/ks.yaml
   - ./calibre-web/ks.yaml
+  - ./configarr/ks.yaml
   - ./govee2mqtt/ks.yaml
   - ./home-assistant/ks.yaml
   - ./immich/ks.yaml
@@ -26,7 +27,7 @@ resources:
   - ./plex/ks.yaml
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
-  - ./recyclarr/ks.yaml
+  # - ./recyclarr/ks.yaml
   - ./redlib/ks.yaml
   - ./sabnzbd/ks.yaml
   - ./smtp-relay/ks.yaml
