--- a/kubernetes/apps/default/configarr/app/kustomization.yaml
+++ b/kubernetes/apps/default/configarr/app/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 configMapGenerator:
   - name: configarr-configmap
     files:
-      - config.yml=./config/configarr.yml
+      - config/config.yml
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
