update config path

--- a/kubernetes/apps/default/configarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/configarr/app/helmrelease.yaml
@@ -58,11 +58,12 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
 
     persistence:
-      config-file:
+      config:
+        enabled: true
         type: configMap
         name: configarr-configmap
         globalMounts:
-          - path: /config/config.yml
+          - path: /app/config/config.yml
             subPath: config.yml
             readOnly: true
       repos:
