--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/config/alertmanager.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/config/alertmanager.yaml
@@ -6,7 +6,9 @@ metadata:
   name: alertmanager
 spec:
   route:
-    groupBy: ["alertname", "job"]
+    groupBy:
+      - alertname
+      - job
     groupInterval: 10m
     groupWait: 1m
     receiver: pushover
@@ -31,7 +33,9 @@ spec:
             value: critical
             matchType: =
   inhibitRules:
-    - equal: ["alertname", "namespace"]
+    - equal:
+        - alertname
+        - namespace
       sourceMatch:
         - name: severity
           value: critical
@@ -42,15 +46,10 @@ spec:
           matchType: =
   receivers:
     - name: "null"
-    - name: heartbeat
-      webhookConfigs:
-        - urlSecret:
-            name: &secret alertmanager-secret
-            key: ALERTMANAGER_HEARTBEAT_URL
     - name: pushover
       pushoverConfigs:
         - html: true
-          message: |-
+          message: |
             {{- range .Alerts }}
               {{- if ne .Annotations.description "" }}
                 {{ .Annotations.description }}
@@ -69,13 +68,12 @@ spec:
                 </small>
               {{- end }}
             {{- end }}
-          priority: |-
+          priority: |
             {{ if eq .Status "firing" }}1{{ else }}0{{ end }}
           sendResolved: true
           sound: gamelan
           title: >-
-            [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}]
-            {{ .CommonLabels.alertname }}
+            [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ .CommonLabels.alertname }}
           ttl: 86400s
           token:
             name: *secret
