--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/externalsecret.yaml
@@ -2,59 +2,15 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: kube-prometheus-stack-secret
+  name: alertmanager-secret
 spec:
   target:
     deletionPolicy: Delete
     template:
       type: Opaque
       data:
-        objstore.yml: |-
-          type: s3
-          config:
-            bucket: thanos
-            endpoint: s3.${SECRET_HOME_DOMAIN}:443
-            access_key: {{ .MINIO_ACCESS_KEY }}
-            secret_key: {{ .MINIO_SECRET_KEY }}
-  data:
-    - secretKey: MINIO_ACCESS_KEY
-      sourceRef:
-        storeRef:
-          name: bitwarden-fields
-          kind: ClusterSecretStore
-      remoteRef:
-        key: ddc59a49-292c-482a-aaaf-5f43d869189d
-        property: access_key
-    - secretKey: MINIO_SECRET_KEY
-      sourceRef:
-        storeRef:
-          name: bitwarden-fields
-          kind: ClusterSecretStore
-      remoteRef:
-        key: ddc59a49-292c-482a-aaaf-5f43d869189d
-        property: secret_key
-    - secretKey: MINIO_S3_ENDPOINT
-      sourceRef:
-        storeRef:
-          name: bitwarden-fields
-          kind: ClusterSecretStore
-      remoteRef:
-        key: ddc59a49-292c-482a-aaaf-5f43d869189d
-        property: s3_endpoint
----
-apiVersion: external-secrets.io/v1
-kind: ExternalSecret
-metadata:
-  name: alertmanager-secret
-spec:
-  target:
-    name: alertmanager-secret
-    template:
-      templateFrom:
-        - configMap:
-            name: alertmanager-config-tpl
-            items:
-              - key: alertmanager.yaml
+        PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
+        ALERTMANAGER_PUSHOVER_TOKEN: "{{ .ALERTMANAGER_PUSHOVER_TOKEN }}"
   data:
     - secretKey: PUSHOVER_USER_KEY
       sourceRef:
