--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/kustomization.yaml
@@ -2,12 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./alertmanagerconfig.yaml
   - ./helmrelease.yaml
   - ./externalsecret.yaml
   - ./scrapeconfigs
-configMapGenerator:
-  - name: alertmanager-config-tpl
-    files:
-      - alertmanager.yaml=./config/alertmanager.yaml
-generatorOptions:
-  disableNameSuffixHash: true
