--- a/kubernetes/apps/volsync-system/volsync/ks.yaml
+++ b/kubernetes/apps/volsync-system/volsync/ks.yaml
@@ -10,6 +10,9 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: snapshot-controller
+      namespace: kube-system
   path: ./kubernetes/apps/volsync-system/volsync/app
   prune: true
   sourceRef:
