--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/alertmanagerconfig.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/alertmanagerconfig.yaml
@@ -17,15 +17,12 @@ spec:
       - receiver: "null"
         matchers:
           - name: alertname
-            value: InfoInhibitor
+            value: Watchdog
             matchType: =
-      - receiver: heartbeat
-        groupInterval: 5m
-        groupWait: 0s
-        repeatInterval: 5m
+      - receiver: "null"
         matchers:
           - name: alertname
-            value: Watchdog
+            value: InfoInhibitor
             matchType: =
       - receiver: pushover
         matchers:
