--- a/kubernetes/apps/default/kyoo/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kyoo/app/helmrelease.yaml
@@ -1,4 +1,18 @@
 ---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: OCIRepository
+metadata:
+  name: kyoo
+spec:
+  interval: 5m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 4.7.1
+  url: oci://ghcr.io/zoriya/helm-charts/kyoo
+---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -6,21 +20,16 @@ metadata:
   name: &app kyoo
 spec:
   interval: 15m
-  chart:
-    spec:
-      chart: kyoo
-      version: 4.7.1
-      sourceRef:
-        kind: HelmRepository
-        name: zoriya
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: kyoo
+  dependsOn: []
   install:
     createNamespace: true
     remediation:
-      retries: 3
+      retries: -1
   upgrade:
     remediation:
-      strategy: rollback
       retries: 3
   values:
     global:
