--- a/kubernetes/apps/networking/nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/networking/nginx/internal/helmrelease.yaml
@@ -19,6 +19,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: &app nginx-internal
+  namespace: &namespace networking
 spec:
   interval: 1h
   chartRef:
