update renovate config

--- a/.renovate/autoMerge.json5
+++ b/.renovate/autoMerge.json5
@@ -5,18 +5,18 @@
       description: "Auto-merge trusted container digests",
       matchDatasources: ["docker"],
       automerge: true,
-      automergeType: "branch",
+      automergeType: "pr",
       matchUpdateTypes: ["digest"],
-      matchPackagePrefixes: ["ghcr.io/home-operations", "ghcr.io/bjw-s-labs"],
-      ignoreTests: true,
+      matchPackageNames: ["/home-operations/"],
+      ignoreTests: false,
     },
     {
-      description: "Auto-merge Helm Releases",
-      matchDatasources: ["helm", "docker"],
+      description: "Auto-merge OCI Charts",
+      matchDatasources: ["docker"],
       automerge: true,
       automergeType: "pr",
       matchUpdateTypes: ["minor", "patch"],
-      matchPackageNames: ["/kube-prometheus-stack/"],
+      matchPackageNames: ["/kube-prometheus-stack/", "/grafana/"],
       ignoreTests: false,
     },
     {
