--- a/.renovate/customManagers.json5
+++ b/.renovate/customManagers.json5
@@ -1,15 +1,15 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "customManagers": [
+  $schema: "https://docs.renovatebot.com/renovate-schema.json",
+  customManagers: [
     {
-      "customType": "regex",
-      "description": ["Process YAML custom dependencies"],
+      customType: "regex",
+      description: "Process annotated dependencies",
       managerFilePatterns: [
-        "/(^|/).+\\.env$/",
-        "/(^|/).+\\.sh$/",
-        "/(^|/).+\\.ya?ml(?:\\.j2)?$/",
+        "/\\.env(?:\\.j2)?$/",
+        "/\\.sh(?:\\.j2)?$/",
+        "/\\.yaml(?:\\.j2)?$/",
       ],
-      "matchStrings": [
+      matchStrings: [
         // # renovate: datasource=github-releases depName=k3s-io/k3s
         // k3s_release_version: &version v1.29.0+k3s1
         // # renovate: datasource=helm depName=cilium repository=https://helm.cilium.io
@@ -31,5 +31,5 @@
       "datasourceTemplate": "docker",
       "versioningTemplate": "redhat"
     }
-  ]
+  ],
 }
