--- a/kubernetes/talos/talconfig.yaml
+++ b/kubernetes/talos/talconfig.yaml
@@ -9,9 +9,9 @@ clusterSvcNets:
 
 endpoint: "https://main.k8s.internal:6443"
 
-# renovate: depName=ghcr.io/siderolabs/installer datasource=docker
+# renovate: datasource=docker depName=ghcr.io/siderolabs/installer
 talosVersion: v1.10.7
-# renovate: depName=ghcr.io/siderolabs/kubelet datasource=docker
+# renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
 kubernetesVersion: v1.33.4
 
 cniConfig:
