--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/alertmanagerconfig.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/alertmanagerconfig.yaml
@@ -46,7 +46,7 @@ spec:
     - name: pushover
       pushoverConfigs:
         - html: true
-          message: |
+          message: |-
             {{- range .Alerts }}
               {{- if ne .Annotations.description "" }}
                 {{ .Annotations.description }}
@@ -65,7 +65,7 @@ spec:
                 </small>
               {{- end }}
             {{- end }}
-          priority: |
+          priority: |-
             {{ if eq .Status "firing" }}1{{ else }}0{{ end }}
           sendResolved: true
           sound: gamelan
