--- a/kubernetes/apps/default/govee2mqtt/app/externalsecret.yaml
+++ b/kubernetes/apps/default/govee2mqtt/app/externalsecret.yaml
@@ -11,6 +11,9 @@ spec:
       data:
         GOVEE_MQTT_USER: "{{ .GOVEE_MQTT_USER }}"
         GOVEE_MQTT_PASSWORD: "{{ .GOVEE_MQTT_PASSWORD }}"
+        GOVEE_EMAIL: "{{ .GOVEE_EMAIL }}"
+        GOVEE_PASSWORD: "{{ .GOVEE_PASSWORD }}"
+        GOVEE_API_KEY: "{{ .GOVEE_API_KEY }}"
   data:
     - secretKey: GOVEE_MQTT_USER
       sourceRef:
@@ -28,3 +31,27 @@ spec:
       remoteRef:
         key: 16b40ee3-38f1-4cd0-9651-d8eba8b82a06
         property: password
+    - secretKey: GOVEE_EMAIL
+      sourceRef:
+        storeRef:
+          name: bitwarden-login
+          kind: ClusterSecretStore
+      remoteRef:
+        key: 5a7fe373-9d69-4009-94bc-a3da9dee495a
+        property: username
+    - secretKey: GOVEE_PASSWORD
+      sourceRef:
+        storeRef:
+          name: bitwarden-login
+          kind: ClusterSecretStore
+      remoteRef:
+        key: 5a7fe373-9d69-4009-94bc-a3da9dee495a
+        property: password
+    - secretKey: GOVEE_API_KEY
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: 5a7fe373-9d69-4009-94bc-a3da9dee495a
+        property: apikey
