fix sloppy paste

--- a/kubernetes/apps/default/telerising/app/helmrelease.yaml
+++ b/kubernetes/apps/default/telerising/app/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
       tmpfs:
         type: emptyDir
         advancedMounts:
-          sonarr:
+          telerising:
             app:
               - path: /var/logs
                 subPath: logs
