--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -35,5 +35,6 @@ resources:
   - ./tandoor/ks.yaml
   - ./tautulli/ks.yaml
   - ./telerising/ks.yaml
+  - ./threadfin/ks.yaml
   - ./vaultwarden/ks.yaml
   - ./zigbee2mqtt/ks.yaml
