--- a/kubernetes/apps/default/telerising/app/helmrelease.yaml
+++ b/kubernetes/apps/default/telerising/app/helmrelease.yaml
@@ -42,13 +42,13 @@ spec:
     #           allowPrivilegeEscalation: false
     #           readOnlyRootFilesystem: false
     #           capabilities: { drop: ["ALL"] }
-    # defaultPodOptions:
-    #   securityContext:
-    #     runAsNonRoot: true
-    #     runAsUser: 1000
-    #     runAsGroup: 1000
-    #     fsGroup: 1000
-    #     fsGroupChangePolicy: OnRootMismatch
+    defaultPodOptions:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: OnRootMismatch
 
     service:
       app:
