--- a/kubernetes/apps/default/telerising/app/helmrelease.yaml
+++ b/kubernetes/apps/default/telerising/app/helmrelease.yaml
@@ -40,10 +40,10 @@ spec:
                 memory: 250Mi
               limits:
                 memory: 512Mi
-            securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: false
-              capabilities: { drop: ["ALL"] }
+            # securityContext:
+            #   allowPrivilegeEscalation: false
+            #   readOnlyRootFilesystem: false
+            #   capabilities: { drop: ["ALL"] }
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
