--- a/kubernetes/apps/default/telerising/app/helmrelease.yaml
+++ b/kubernetes/apps/default/telerising/app/helmrelease.yaml
@@ -40,13 +40,13 @@ spec:
                 memory: 250Mi
               limits:
                 memory: 512Mi
-            # securityContext:
-            #   allowPrivilegeEscalation: false
-            #   readOnlyRootFilesystem: false
-            #   capabilities: { drop: ["ALL"] }
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: false
+              capabilities: { drop: ["ALL"] }
     defaultPodOptions:
       securityContext:
-        runAsNonRoot: true
+        runAsNonRoot: false
         runAsUser: 1000
         runAsGroup: 1000
         fsGroup: 1000
